# playwright-pool

./: README.md  playwrightpool.py  pyproject.toml
examples/: airbnb-scraper.py
