[tool.poetry]
name = "playwright-pool"
version = "0.1.0"
description = "example for how to use playwright as a asynchronous browser pool"
authors = ["granitosaurus <bernardas.alisauskas@pm.me>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
playwright = "^1.17.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
parsel = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
